@@ -3,10 +3,7 @@ package com.infinity.courseservice.courses;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
@@ -27,13 +24,13 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 
 import com.infinity.courseservice.dtos.AllocationDtos.AllocationHistoryDtoWithCourse;
-import com.infinity.courseservice.dtos.AllocationDtos.OfferDto;
+import com.infinity.courseservice.dtos.ApplicationDtos.ApplicationDto;
 import com.infinity.courseservice.dtos.CourseDtos.CourseDto;
 import com.infinity.courseservice.dtos.CourseDtos.CourseFilterRequest;
 import com.infinity.courseservice.dtos.CourseDtos.CourseNeedAndAllocations;
@@ -44,6 +41,7 @@ import com.infinity.courseservice.dtos.CourseDtos.StudentTaughtCourseRequest;
 import com.infinity.courseservice.dtos.NeedDtos.NeedDto;
 import com.infinity.courseservice.dtos.SectionDtos.SectionDto;
 import com.infinity.courseservice.dtos.UserDtos.UserDto;
+import com.infinity.courseservice.enums.ApplicationStatus;
 import com.infinity.courseservice.enums.SectionType;
 import com.infinity.courseservice.enums.UserRole;
 import com.infinity.courseservice.exceptions.BadRequestException;
@@ -346,7 +344,6 @@ public class CourseServiceTest {
                 section.setId(1L);
 
                 NeedDto need = new NeedDto(5L, courseId, "Grading", 30, 15, semester.getYear(), semester.getSemester(), null);
-                OfferDto offer = new OfferDto(1L, true, "description");
                 SectionDto sectionDto = new SectionDto(99L, 2024, "W1", "001", SectionType.LECTURE,
                                                 new CourseDto(1L, "COSC", "Networks", "329"));
                 AllocationHistoryDtoWithCourse dto = new AllocationHistoryDtoWithCourse(
@@ -355,8 +352,8 @@ public class CourseServiceTest {
                                                 "COSC", 2025, 3, null,
                                                 null, null,
                                                 true),
-                                offer,
-                                true,
+                                new ApplicationDto(null, null, null, null, true, null, null, null),
+                                ApplicationStatus.CONFIRMED,
                                 10,
                                sectionDto);
 
@@ -387,61 +384,58 @@ public class CourseServiceTest {
 
         @Test
         void testGetInstructorCourseNeedsAndAllocations_Success() {
-        Long instructorId = 77L;
+                Long instructorId = 77L;
 
-        SectionDto section1 = new SectionDto(
-        10L, 2025, "W1", "001", SectionType.LECTURE,
-        new CourseDto(1L, "COSC", "Security", "430"));
+                SectionDto section1 = new SectionDto(
+                                10L, 2025, "W1", "001", SectionType.LECTURE,
+                                new CourseDto(1L, "COSC", "Security", "430"));
 
-        SectionDto section2 = new SectionDto(
-        11L, 2025, "W1", "002", SectionType.LABORATORY,
-        new CourseDto(1L, "COSC", "Security", "430"));
-        OfferDto offer = new OfferDto(1L, true, "description");
-        NeedDto need = new NeedDto(10L, 1L, "Labs", 25, 10, 2025, "W1", null);
-        AllocationHistoryDtoWithCourse dto = new AllocationHistoryDtoWithCourse(
-        42L,
-        new UserDto(2L, "Alice", "Wang", "awang@test.com", List.of(UserRole.STUDENT),
-        12345678,
-        "COSC", 2025, 3, null, null, null,true),
-        offer,
-        true,
-        10,
-        new SectionDto(99L, 2024, "W1", "001", SectionType.LECTURE,
-        new CourseDto(1L, "COSC", "CS", "112")));
+                SectionDto section2 = new SectionDto(
+                                11L, 2025, "W1", "002", SectionType.LABORATORY,
+                                new CourseDto(1L, "COSC", "Security", "430"));
+                NeedDto need = new NeedDto(10L, 1L, "Labs", 25, 10, 2025, "W1", null);
+                AllocationHistoryDtoWithCourse dto = new AllocationHistoryDtoWithCourse(
+                                42L,
+                                new UserDto(2L, "Alice", "Wang", "awang@test.com", List.of(UserRole.STUDENT),
+                                                12345678,
+                                                "COSC", 2025, 3, null, null, null, true),
+                                new ApplicationDto(null, null, null, null, true, null, null, null),
+                                ApplicationStatus.CONFIRMED,
+                                10,
+                                new SectionDto(99L, 2024, "W1", "001", SectionType.LECTURE,
+                                                new CourseDto(1L, "COSC", "CS", "112")));
 
-        when(sectionService.getInstructorSections(instructorId)).thenReturn(List.of(section1,
-        section2));
-        when(needService.getNeed(1L, 2025, "W1")).thenReturn(need);
-        when(applicationInterface.getAllocationsBySectionId(any())).thenReturn(ResponseEntity.ok(List.of(dto)));
+                when(sectionService.getInstructorSections(instructorId)).thenReturn(List.of(section1,
+                                section2));
+                when(needService.getNeed(1L, 2025, "W1")).thenReturn(need);
+                when(applicationInterface.getAllocationsBySectionId(any())).thenReturn(ResponseEntity.ok(List.of(dto)));
 
-        List<CourseNeedAndAllocations> result = courseService
-        .getInstructorCourseNeedsAndAllocations(instructorId);
+                List<CourseNeedAndAllocations> result = courseService
+                                .getInstructorCourseNeedsAndAllocations(instructorId);
 
-        assertEquals(2, result.size());
-        assertEquals("Security", result.get(0).section().course().name());
-        assertEquals("Labs", result.get(0).need().description());
-        assertEquals("Alice",
-        result.get(0).allocations().get(0).student().firstName());
+                assertEquals(2, result.size());
+                assertEquals("Security", result.get(0).section().course().name());
+                assertEquals("Labs", result.get(0).need().description());
+                assertEquals("Alice",
+                                result.get(0).allocations().get(0).student().firstName());
         }
 
         @Test
-        void
-        testGetInstructorCourseNeedsAndAllocations_DoesNotIgnorenWhenMissingNeed() {
-        Long instructorId = 77L;
+        void testGetInstructorCourseNeedsAndAllocations_DoesNotIgnorenWhenMissingNeed() {
+                Long instructorId = 77L;
 
-        SectionDto section1 = new SectionDto(
-        10L, 2025, "W1", "001", SectionType.LECTURE,
-        new CourseDto(1L, "COSC", "Security", "430"));
+                SectionDto section1 = new SectionDto(
+                                10L, 2025, "W1", "001", SectionType.LECTURE,
+                                new CourseDto(1L, "COSC", "Security", "430"));
 
-        when(sectionService.getInstructorSections(instructorId)).thenReturn(List.of(section1));
-        when(needService.getNeed(1L, 2025, "W1")).thenThrow(new
-        NotFoundException("Need not found"));
-        when(applicationInterface.getAllocationsBySectionId(10L))
-        .thenReturn(ResponseEntity.ok(Collections.emptyList()));
-        List<CourseNeedAndAllocations> result = courseService
-        .getInstructorCourseNeedsAndAllocations(instructorId);
+                when(sectionService.getInstructorSections(instructorId)).thenReturn(List.of(section1));
+                when(needService.getNeed(1L, 2025, "W1")).thenThrow(new NotFoundException("Need not found"));
+                when(applicationInterface.getAllocationsBySectionId(10L))
+                                .thenReturn(ResponseEntity.ok(Collections.emptyList()));
+                List<CourseNeedAndAllocations> result = courseService
+                                .getInstructorCourseNeedsAndAllocations(instructorId);
 
-        assertEquals(1, result.size());
+                assertEquals(1, result.size());
         }
 
         @Test
@@ -475,8 +469,8 @@ public class CourseServiceTest {
                                 new UserDto(2L, "Alice", "Wang", "awang@test.com",
                                                 List.of(UserRole.STUDENT), 12345678,
                                                 "COSC", 2025, 3, null, null, null, true),
-                                new OfferDto(1L, true, "description"),
-                                true,
+                                new ApplicationDto(null, null, null, null, true, null, null, null),
+                                ApplicationStatus.CONFIRMED,
                                 10,
                                 new SectionDto(99L, 2024, "W1", "001", SectionType.LECTURE,
                                                 new CourseDto(1L, "COSC", "CS", "112")));
@@ -718,6 +712,7 @@ public class CourseServiceTest {
                 assertEquals("Calculus", result.get(1).name());
                 assertEquals("101", result.get(1).courseNum());
         }
+
         @Test
         void testGetCoursesWithoutNeeds() {
                 Course course = new Course("COSC", "CAPSTONE", "499");
